--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i18n-gen",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "Command line utility to generate i18n translation files from .tsv source to .yml and/or .json format",
   "scripts": {
     "test": "npm run compile; i18n-gen sample.tsv",
@@ -12,7 +12,7 @@
   "license": "MIT",
   "preferGlobal": true,
   "bin": {
-    "i18n-yamler": "lib/index.js"
+    "i18n-gen": "lib/index.js"
   },
   "dependencies": {
     "prelude-ls": "^1.1.2"
