--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "i18n-gen",
-  "version": "0.2.7",
-  "description": "Command line utility to generate i18n translation files from .tsv source to .yml and/or .json format",
+  "version": "0.3.5",
+  "description": "Command line utility to generate i18n translation files from remote (Google Spreadsheets) .tsv source to .yml and/or .json format",
   "scripts": {
-    "test": "npm run compile && ./lib/index.js sample.tsv",
+    "test": "npm run compile && ./lib/index.js -s https://docs.google.com/spreadsheets/d/1NO-w7UKhIwWCT4VymBnH7xk6VCUKECqB5XNrwt49rUA/pub?output=tsv",
+    "test1": "npm run compile && ./lib/index.js -p '.' -s https://docs.google.com/spreadsheets/d/1NO-w7UKhIwWCT4VymBnH7xk6VCUKECqB5XNrwt49rUA/pub?output=tsv",
+    "test2": "npm run compile && ./lib/index.js -p './out' -s https://docs.google.com/spreadsheets/d/1NO-w7UKhIwWCT4VymBnH7xk6VCUKECqB5XNrwt49rUA/pub?output=tsv",
     "clean": "rimraf dist",
     "pretest": "npm run compile",
     "prepublish": "npm run compile",
@@ -20,10 +22,14 @@
     "i18n-gen": "lib/index.js"
   },
   "dependencies": {
+    "download": "^5.0.2",
+    "download-status": "^2.2.1",
+    "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "prelude-ls": "^1.1.2"
   },
   "devDependencies": {
     "rimraf": "^2.4.3",
-    "livescript":"^1.5.0"
+    "livescript": "^1.5.0"
   }
 }
