--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "i18n-gen",
-  "version": "0.4.1",
+  "version": "0.4.2",
+  "author": "Roger LAM <rlhk.open@gmail.com>",
   "description": "Command line utility to generate i18n translation files from remote (Google Spreadsheets) .tsv source to .yml and/or .json format",
+  "keywords": [
+    "i18n",
+    "localization"
+  ],
   "scripts": {
-    "test": "npm run compile && ./lib/index.js -p './out' -s https://docs.google.com/spreadsheets/d/1NO-w7UKhIwWCT4VymBnH7xk6VCUKECqB5XNrwt49rUA/pub?output=tsv",
-    "test1": "npm run compile && ./lib/index.js -p './out' -s https://docs.google.com/spreadsheets/d/1NO-w7UKhIwWCT4VymBnH7xk6VCUKECqB5XNrwt49rUA/pub?output=tsv",
-    "test2": "npm run compile && ./lib/index.js -p './out' -s https://docs.google.com/spreadsheets/d/1NO-w7UKhIwWCT4VymBnH7xk6VCUKECqB5XNrwt49rUA/pub?output=tsv",
+    "test": "node_modules/.bin/mocha --reporter dot --ui tdd --compilers ls:node_modules/livescript",
+    "test:remote": "npm run compile && ./lib/index.js -p './out' -s https://docs.google.com/spreadsheets/d/1NO-w7UKhIwWCT4VymBnH7xk6VCUKECqB5XNrwt49rUA/pub?output=tsv",
+    "test:fs": "npm run compile && ./lib/index.js -p './out' -s ./test/data-source/i18n-gen-sample-source.xlsx",
     "test:json": "npm run compile && ./lib/index.js -p './out' -f 'json' -s https://docs.google.com/spreadsheets/d/1NO-w7UKhIwWCT4VymBnH7xk6VCUKECqB5XNrwt49rUA/pub?output=tsv",
-    "clean": "rimraf dist",
+    "test:no-src": "npm run compile && ./lib/index.js -p './out'",
+    "clean": "rimraf dist; rimraf out",
     "pretest": "npm run compile",
     "prepublish": "npm run compile",
     "compile": "lsc -c -b -m embedded --no-header -o lib/ src/index.ls"
   },
-  "author": "Roger Lam <rlhk.open@gmail.com>",
   "repository": {
     "type": "git",
     "url": "git://github.com/rlhk/i18n-gen.git"
@@ -25,12 +30,19 @@
   "dependencies": {
     "download": "^5.0.2",
     "download-status": "^2.2.1",
+    "exceljs": "^0.2.39",
+    "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "prelude-ls": "^1.1.2"
+    "node-excel-to-json": "0.0.3",
+    "prelude-ls": "^1.1.2",
+    "spreadsheet-column": "^1.1.1"
   },
   "devDependencies": {
+    "istanbul": "^0.4.5",
+    "livescript": "^1.5.0",
+    "mocha": "^3.2.0",
     "rimraf": "^2.4.3",
-    "livescript": "^1.5.0"
+    "sinon": "^1.17.7"
   }
 }
