--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "i18n-gen",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "author": "Roger LAM <rlhk.open@gmail.com>",
   "description": "Command line utility to generate i18n translation files from remote (Google Spreadsheets) .tsv source to .yml and/or .json format",
   "keywords": [
     "i18n",
-    "localization"
+    "localization",
+    "locales"
   ],
   "scripts": {
     "test": "node_modules/.bin/mocha --reporter dot --ui tdd --compilers ls:node_modules/livescript",
     "test:remote": "npm run compile && ./lib/index.js -p './out' -s https://docs.google.com/spreadsheets/d/1NO-w7UKhIwWCT4VymBnH7xk6VCUKECqB5XNrwt49rUA/pub?output=tsv",
-    "test:fs": "npm run compile && ./lib/index.js -p './out' -s ./test/data-source/i18n-gen-sample-source.xlsx",
-    "test:json": "npm run compile && ./lib/index.js -p './out' -f 'json' -s https://docs.google.com/spreadsheets/d/1NO-w7UKhIwWCT4VymBnH7xk6VCUKECqB5XNrwt49rUA/pub?output=tsv",
+    "test:local": "npm run compile && ./lib/index.js -p './out' -s ./test/data-source/i18n-gen-sample-source.xlsx",
+    "test:local:json": "npm run compile && ./lib/index.js -p './out' -f 'json' -s ./test/data-source/i18n-gen-sample-source.xlsx",
+    "test:remote:json": "npm run compile && ./lib/index.js -p './out' -f 'json' -s https://docs.google.com/spreadsheets/d/1NO-w7UKhIwWCT4VymBnH7xk6VCUKECqB5XNrwt49rUA/pub?output=tsv",
     "test:no-src": "npm run compile && ./lib/index.js -p './out'",
     "clean": "rimraf dist; rimraf out",
     "pretest": "npm run compile",
